--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,16 @@ body {
 }
 
 .page{
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
   position: relative;
-  background: url("assets/joinlist.png") center top / cover no-repeat;
+
+  background-image: url("assets/joinlist.png");
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
+
 
 .srOnly{
   position:absolute;
