--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
   width: 100%;
   position: relative;
 
-  background-image: url("assets/joinlist.png");
+  background-image: url("asset1/joinlist.png");
   background-position: center top;
   background-repeat: no-repeat;
   background-size: contain;
